--- a/css/aboutcss.css
+++ b/css/aboutcss.css
@@ -195,3 +195,16 @@
         .text{
             visibility: hidden;
         }
+        @media screen and (max-width: 1600px) {
+            .main{
+                align-items: end;
+                justify-content: space-evenly;
+            }
+        }
+
+        @media screen and (max-width: 1300px) {
+            .main{
+                background-image: none;
+                align-items: center;
+            }
+        }
