--- a/css/style.css
+++ b/css/style.css
@@ -323,3 +323,11 @@
         .reveal1, .card-container{
             visibility: hidden;
         }
+
+        @media screen and (max-width: 1300px) {
+            .header-container{
+                background-position: center;
+                background-size: cover;            }
+        
+        }
+        
