--- a/css/style.css
+++ b/css/style.css
@@ -327,7 +327,29 @@
         @media screen and (max-width: 1300px) {
             .header-container{
                 background-position: center;
-                background-size: cover;            }
-        
+                background-size: cover;            
+            }
+        }
+
+        @media screen and (max-width: 1000px) {
+            .header-container{
+                flex-direction: row;
+                justify-content: left;
+                align-items: center;
+            }
+
+            .card{
+                width: 200px;
+                height: 200px;
+            }
+
+            .card:hover > .card-wrapper::before {
+                height: 190px;
+                width: 190px;
+                opacity: 1;
+            }
+            .card-wrapper h2 {
+                font-size: 30px;
+            }
         }
         
