--- a/css/aboutcss.css
+++ b/css/aboutcss.css
@@ -202,9 +202,15 @@
             }
         }
 
-        @media screen and (max-width: 1300px) {
+        @media screen and (max-width: 1000px) {
             .main{
                 background-image: none;
                 align-items: center;
+            }
+        }
+
+        @media screen and (max-width: 600px) {
+            .main{
+                flex-direction: row;
             }
         }
