--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,45 @@
             transition: 0.5s ease-in-out;
         }
 
+        /* Estilos para as imagens relacionadas ao "Projeto 1" */
+        .card-projeto1 img {
+            max-width: 100%;
+            margin: 10px;
+        }
+
+        /* Estilos para o pop-up */
+        .image-popup {
+            display: none;
+            position: fixed;
+            z-index: 999;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+        }
+
+        .popup-content {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .close-popup {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 24px;
+            cursor: pointer;
+        }
+
+        .popup-images img {
+            max-width: 100%;
+        }
         .card-text {
             width: 40%;
             letter-spacing: 1px;
