--- a/css/style.css
+++ b/css/style.css
@@ -180,18 +180,71 @@
             flex-direction: column;
             justify-content: space-evenly;
             margin: 3rem ;
+            padding: 0 20px;
+        }
+
+        .about{
+            width: 100%;
+            padding: 0px 0px;
+            background-color: #222222;
+        }
+
+        .text{
+            width: 550px;
+        }
+        
+        .main{
+            background-image: url(../img/eu.png);
+            background-repeat: no-repeat;
+            background-position: left;
+            background-size:auto;
+            height: 100vh;
+            width: 100vw;
+
+            flex-direction: column;
+            box-sizing: border-box;
+
+            margin: 0 auto;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+        }
+        
+        .text h1{
+            color: #00ac1d;
+            font-size: 80px;
+            text-transform: capitalize;
+            margin-bottom: 20px;
+        }
+
+        .text h2{
+            color: #ffffff;
+            font-size: 25px;
+            text-transform: capitalize;
+            margin-bottom: 25px;
+            letter-spacing: 2px;
+        }
+
+        span{
+            color: #00ac1d;
+            font-size: 35px;
+        }
+
+        .text p{
+            color: #616161;
+            letter-spacing: 1px;
+            line-height: 28px;
+            font-size: 18px;
+            margin-bottom: 45px;
         }
 
         .card-container {
+            width: 100vh;
             display: flex;
             justify-content: space-evenly;
             align-items: center;
             width: 90%;
             transition: all 1s ease;
-        }
-            
-        #two:checked ~ .card-container {
-            margin-left: -100%;
         }
         
         .card {
@@ -311,39 +364,26 @@
             visibility: visible;
             font-size: 14px;
         }
-        
-        .button {
+
+        .outros {
+            width: 100%;
+            height: 100px;
             display: flex;
-            margin: 20px;
+            align-items: center;
             justify-content: center;
-        }
-        .button label {
-            height: 15px;
-            width: 15px;
-            background-color: #00ac1d;
-            margin: 0 4px;
-            border-radius: 20px;
-            transition: all 0.5 ease;
+
         }
 
-        .button label.active {
-            width: 35px;
-        }
-
-        #one:checked ~ .button label.one {
-            width: 35px;
-        }
-
-        #two:checked ~ .button label.two {
-            width: 35px;
-        }
-
-        #two:checked ~ .button label.one {
-            width: 15px;
-        }
-
-        input[type="radio"]{
-            display: none;
+        .outros a {
+            text-decoration: none;
+            color: #00ff2a;
+            padding: 1rem 4rem;
+            border: 1px solid #005f10;
+            min-width: 4rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: .5s ease-in-out;
         }
 
         .footer {
@@ -355,6 +395,18 @@
             justify-content: center;
             color: #505050;
         }
+
+        .footer a {
+            text-decoration: none;
+            color: #00ff2a;
+            padding: 1rem 4rem;
+            min-width: 4rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: .5s ease-in-out;
+        }
+
         .reveal1, .card-container{
             visibility: hidden;
         }
@@ -387,6 +439,7 @@
                 font-size: 30px;
             }
         }
+        
         @media screen and (max-width: 600px) {
             .header-container {
                 height: 90vh;
